Thu Nov 11 10:34:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Getter_T.cpp:
          Resolved compile issues.

Thu Nov 11 10:28:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/WaitSet.cpp:
          Initialize pointer to nil. Added log message when
          BAD_INV_ORDER is thrown.

        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
          Bailing out when key name is empty

Thu Nov 11 10:23:06 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector.mpc:
        Add missing project.

Thu Nov 11 10:22:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
          Bailing out rather sooner than later. Output of this test was very large.

Thu Nov 11 09:54:07 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * MPC/config/taoidl3toxmidefaults.mpb:
          Make this base project to inherit from xerces. So that projects
          that need tao_idl3_to_xmi will not build if xerces is not present
          since tao_idl3_to_xmi is dependent on xerces.

        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
        * tests/IDL3_to_XMI/Forward_Declared/Forward_Declared.mpc:
          Cleaned a bit these files.

Thu Nov 11 09:52:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/CCM_DataReader.cpp:
        * connectors/dds4ccm/impl/CCM_DataWriter.cpp:
          Fuzz.

        * connectors/dds4ccm/impl/ndds/DataReader_T.h:
        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
          Implemented the IDL representation of the ::DDS::DataReader.
          First step in cleaning this DataReader.

        * connectors/dds4ccm/impl/ndds/convertors/SampleInfo.h:
        * connectors/dds4ccm/impl/ndds/convertors/SampleInfoSeq.h: